--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  max-height: 100vh;
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +36,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#background-video {
+
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50vw;
+  height: 100%;
+  object-fit:cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+#background-video-div {
+  background-color: black;
+  
+}
+
+body {
+  background-color: black;
+}
+
+#logo {
+  font-family:Aeros;
+  font-size: 3.5em;
+}
+
+@font-face {
+  font-family: "Aeros";
+  src: local("Aeros"),
+    url("./fonts/Aeros.ttf") format("truetype");
+  font-weight: normal;
+}
+
+h1 {
+  
 }
